[tool.poetry]
name = "api_boilerplate"
version = "2.0"
description = "A dockerized and production ready python API template with no setup required."
authors = ["Adishwar Rishi <adiswa123@gmail.com>"]
license = "LGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.0"
Flask = "^2.3.2"
uWSGI = "^2.0.21"
SQLAlchemy = "^2.0.18"
PyMySQL = "^1.1.0"
cryptography = "^41.0.2"
bcrypt = "^4.0.1"
pavlova = "^0.1.3"

[tool.poetry.group.dev.dependencies]
alembic = "^1.11.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
poetryup = "^0.12.7"
ruff = "^0.0.263"
pyright = "^1.1.316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.pyright]
include = ["api_boilerplate", "tests"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
